src/assets/styles.css
/* ... */
hr {
	width: 100%;
	border: none;
	border-radius: 2px;
	height: 1px;
	background-color: var(--color-primary-faint);
	margin: calc(var(--spacing) * 8) 0;
}

/* 
::selection {
	background-color: var(--color-secondary-faint);
	color: var(--color-background-darker);
	font-family: 'Source Code Pro';
} 
*/

:focus {
	outline: none;
}

figure {
	margin: calc(var(--spacing) * 6) 0;

	&:has(.lightbox) figcaption .attribution {
		display: block;
		margin: calc(var(--spacing) * 2) 0;
	}

	figcaption {
		margin-top: calc(var(--spacing) * 2);
		font-size: var(--font-small);
		color: var(--color-primary);
		font-style: italic;

		.attribution {
			font-style: italic;
			font-size: var(--font-small);
			opacity: 0.8;
		}
	}
}

img {
	width: 100%;
	border-radius: var(--spacing);
}

blockquote {
	font-family: 'Source Code Pro Italic Extra-light';
	border-left: 1px solid var(--color-secondary-faint);
	padding-left: calc(var(--spacing) * 4);
	margin-left: 0;

	p {
		margin: 0;
	}
}

cite {
	display: block;
	font-family: 'Source Code Pro Light';
	font-style: normal;
	margin-top: calc(var(--spacing) * 4);
}

ul {
	margin-top: 0;
	padding-left: 0;

	li {
		list-style-type: none;

		&::before {
			color: var(--color-primary-faint);
			content: '⟐ ';
		}
	}
}

details {
	summary {
		display: flex;
		align-items: center;
		cursor: pointer;

		&:hover {
			&::before {
				background-color: var(--color-secondary-faint);
			}
		}

		&:focus-visible {
			&::before {
				background-color: var(--color-tertiary);
			}
		}
	}
	summary::marker {
		content: '';
	}
	summary::before {
		display: inline-block;
		content: '';
		width: calc(var(--spacing) * 8);
		height: calc(var(--spacing) * 8);
		margin-right: calc(var(--spacing) * 2);
		aspect-ratio: 1/1;
		mask: var(--icon-info);
		mask-repeat: no-repeat;
		mask-position: center;
		background-color: var(--color-secondary);
		transition: 0.1s;
	}
	&[open] {
		summary::before {
			rotate: 90deg;
		}
	}
}
.toc {
	line-height: 1.8;
	margin-left: 1rem;
	border-left: 1px solid var(--color-primary-fainter);

	ul {
		padding-left: revert;
	}

	li ul {
		padding-left: 0;
	}
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: 'Source Code Pro', 'Helvetica', sans-serif;
}

/* Footnotes */
.footnote-ref a {
	text-decoration: none;
}

.footnotes-sep {
	opacity: var(--translucent);
}

.footnotes {
	&::before {
		content: 'Footnotes:';
		color: var(--color-primary-faint);
	}
}

.contact-form {
	margin: 0 0 calc(var(--spacing) * 8) 0;
}

.video-title {
	display: flex;
	align-items: center;
	gap: calc(var(--spacing) * 3);

	&::before {
		content: '';
		width: 2rem;
		aspect-ratio: 1/1;
		mask: var(--icon-film);
		mask-repeat: no-repeat;
		mask-position: center;
		background-color: var(--color-primary);

		@media (width <= 749px) {
			width: 2.5rem;
		}
	}
}

iframe[title='YouTube video player'],
iframe[src*='bandcamp.com'] {
	display: block;
	margin: 0 auto calc(var(--spacing) * 8);
	width: 100%;
	height: 425px;
	border-radius: var(--radius);
	box-shadow: var(--shadow);
}
iframe[src*='bandcamp.com'] {
	width: 80%;

	@media (width <= 749px) {
		width: 100%;
	}
}

.wordmark {
	width: 400px;
	display: block;
	margin: auto;
	image-rendering: pixelated;

	@media (width <= 749px) {
		width: 60%;
	}
}

#logo {
	mask: var(--logo);

	@media (width <= 749px) {
		mask: var(--logo_mobile);
	}

	mask-repeat: no-repeat;
	mask-position: center;
	width: var(--logo_width);
	height: var(--logo_width);
	background-color: var(--color-primary);
	transition: 0.25s;
	margin: auto;

	&:hover,
	&:is(a:focus #logo) {
		background-color: var(--color-tertiary);
	}

	@media (width <= 749px) {
		width: calc(var(--logo_width) / 2);
		height: calc(var(--logo_width) / 2);
		vertical-align: middle;
	}
}

#nav {
	display: flex;
	flex-direction: column;
	gap: calc((var(--spacing) * 4));

	#main-menu {
		display: none;
		flex-direction: column;

		@media (width <= 749px) {
			align-items: flex-end;
			column-gap: calc(var(--spacing) * 2);
			hr {
				margin: calc(var(--spacing) * 2) 0;
			}
		}

		@media (width >= 749px) {
			display: flex;
		}
	}
}

.utility-menu__mobile {
	flex-direction: column;
	width: 100%;
	align-items: flex-end;
}

/* Menu links */
#nav #main-menu a,
.sidebar-footer nav a,
#main-menu .utility-menu__mobile a {
	display: block;
	text-decoration: none;
	transition-property: letter-spacing;
	transition-duration: 0.1s;
	line-height: calc(var(--spacing) * 10);
	padding-left: calc(var(--spacing) * 2);

	@media (width <= 749px) {
		padding-left: calc(var(--spacing) * 4);
	}

	&::before {
		content: '/';
		margin-right: var(--spacing);
		transition: 0.1s;

		@media (width <= 749px) {
			content: none;
		}
	}

	&:hover,
	&:focus {
		background: linear-gradient(
			111deg,
			var(--color-secondary) 88%,
			var(--color-tertiary) 88.1%,
			var(--color-tertiary) 92%,
			rgba(0, 0, 0, 0) 92.1%
		);
		color: var(--color-background);
		font-family: 'Source Code Pro';
		letter-spacing: calc(var(--spacing) / 2);

		&::before {
			margin-right: calc(var(--spacing) * 2);
		}

		&::after {
			color: var(--color-background);
		}

		@media (width <= 749px) {
			padding-right: calc(var(--spacing) * 6);
			width: 100%;
			text-align: left;
			background: linear-gradient(
				111deg,
				var(--color-secondary) 85%,
				var(--color-tertiary) 85.1%,
				var(--color-tertiary) 89%,
				rgba(0, 0, 0, 0) 89.1%
			);
		}
	}

	&:focus {
		outline: none;
	}
}

.expanded {
	display: flex !important;

	@media (width <= 749px) {
		&#main-menu {
			border-left: 1px solid var(--color-secondary);
		}
	}
}

main {
	display: flex;
	flex-direction: column;
	flex: 1 0;
	margin-left: var(--sidebar-width);
	margin-top: calc(var(--spacing) * 8);
	margin-right: calc(var(--spacing) * 8);
	padding-left: calc(var(--spacing) * 4);

	@media (width <= 749px) {
		margin-left: 0;
		margin-right: unset;
		padding-left: unset;
		margin-top: calc(var(--spacing) * 4);
	}
}

.main-content {
	display: flex;
	flex-direction: column;
	flex: 1 0;
}
/* ... */

